[gd_scene load_steps=12 format=3 uid="uid://dldks651ckfsl"]

[ext_resource type="Script" uid="uid://bv878mywlfxms" path="res://scripts/ui/character_selector.gd" id="1_to3sr"]
[ext_resource type="Resource" uid="uid://blluua76edi7v" path="res://scenes/run/run_startup.tres" id="2_gl58c"]
[ext_resource type="Texture2D" uid="uid://cpydvk8mq66o5" path="res://art/tile_0087.png" id="3_45qu8"]
[ext_resource type="Texture2D" uid="uid://cqcal03735mv8" path="res://art/tile_0118.png" id="3_to3sr"]
[ext_resource type="Texture2D" uid="uid://pgj8vfpj6tc5" path="res://art/tile_0130.png" id="4_gl58c"]
[ext_resource type="Texture2D" uid="uid://bfvi02kojsa00" path="res://art/tile_0103.png" id="5_txrk6"]

[sub_resource type="Gradient" id="Gradient_otr3d"]
offsets = PackedFloat32Array(0, 0.991416)
colors = PackedColorArray(0.44743, 0.186504, 0.126029, 1, 0.0475275, 0.0081389, 0.00403287, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8ekit"]
gradient = SubResource("Gradient_otr3d")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_n4uci"]
line_spacing = 8.0
shadow_size = 4
shadow_color = Color(0.44743, 0.186504, 0.126029, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mswbi"]
line_spacing = 6.0
font_size = 12
shadow_size = 4
shadow_color = Color(0.44743, 0.186504, 0.126029, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_uy6wb"]

[node name="CharacterSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_to3sr")
run_startup = ExtResource("2_gl58c")
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_8ekit")
metadata/_edit_lock_ = true

[node name="CharTextVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 9.0
offset_right = 120.0
offset_bottom = 72.0
grow_horizontal = 2
metadata/_edit_lock_ = true

[node name="CharacterLabel" type="Label" parent="CharTextVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Warrior"
label_settings = SubResource("LabelSettings_n4uci")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="CharTextVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Likes to slice things up.
Second line of text."
label_settings = SubResource("LabelSettings_mswbi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -69.0
offset_right = 70.0
offset_bottom = -9.0
grow_vertical = 0
texture = ExtResource("3_45qu8")
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -23.0
offset_right = -9.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
text = "Start"
metadata/_edit_lock_ = true

[node name="CharButtonsHBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = 7.0
offset_right = 98.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
metadata/_edit_lock_ = true

[node name="WarriorButton" type="Button" parent="CharButtonsHBox"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_uy6wb")

[node name="Icon" type="TextureRect" parent="CharButtonsHBox/WarriorButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_to3sr")
expand_mode = 1
stretch_mode = 5

[node name="WizardButton" type="Button" parent="CharButtonsHBox"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_uy6wb")

[node name="Icon" type="TextureRect" parent="CharButtonsHBox/WizardButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gl58c")
expand_mode = 1
stretch_mode = 5

[node name="AssassinButton" type="Button" parent="CharButtonsHBox"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_uy6wb")

[node name="Icon" type="TextureRect" parent="CharButtonsHBox/AssassinButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_txrk6")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CharButtonsHBox/WarriorButton" to="." method="_on_warrior_button_pressed"]
[connection signal="pressed" from="CharButtonsHBox/WizardButton" to="." method="_on_wizard_button_pressed"]
[connection signal="pressed" from="CharButtonsHBox/AssassinButton" to="." method="_on_assassin_button_pressed"]
